# qqd

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benchmarks/: qmd-baseline.json  query-quality-fixture.json
scripts/: build_qmd_parity_fixture.sh
src/: benchmark.rs  main.rs  mcp.rs  models.rs  native.rs  sqlite_vec.rs
tests/: integration.rs
tests/fixtures/: qmd-parity-queries.json
tests/fixtures/qmd-config/: index.yml
tests/fixtures/qmd-corpus/: doc-01.md  doc-02.md  doc-03.md  doc-04.md  doc-05.md  doc-06.md  doc-07.md  doc-08.md  doc-09.md  doc-10.md  doc-11.md  doc-12.md
