[package]
name = "qqd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
embellama = { path = "vendor/embellama", default-features = false }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tiny_http = "0.12.0"
percent-encoding = "2.3.2"

[dev-dependencies]
tempfile = "3.20.0"
